@@ -12,7 +12,7 @@
 /*                                                             */
 /***************************************************************/
 #include "config.h"
-static char const RCSID[] = "$Id: amiga.c,v 1.4 2000-02-18 03:45:42 dfs Exp $";
+static char const RCSID[] = "$Id: amiga.c,v 1.1 2000-03-15 16:03:57 dfs Exp $";
 
 #include <stdlib.h>
 #include <string.h>
