@@ -1,6 +1,6 @@
 # Makefile for REMIND
 #
-# $Id: makefile.os2,v 1.1 1998-01-15 02:50:32 dfs Exp $
+# $Id: makefile.os2,v 1.1 2000-03-15 16:03:57 dfs Exp $
 #
 # THIS IS OUT OF DATE!
 #
