@@ -1,4 +1,4 @@
-# $Id: smakefile,v 1.1 1998-01-15 02:50:36 dfs Exp $
+# $Id: smakefile,v 1.1 2000-03-15 16:03:57 dfs Exp $
 # Makefile for REMIND, suitable for SAS/C 6.50 under AmigaDOS
 # English version
 # THIS IS OUT OF DATE!
